src/objects/promo__c.object
<CustomObject>
    <description>Used to track promotional items given.</description>
    <fields>
        <fullName>Pomo_Unit_Cost__c</fullName>
        <description>Cost per a particular unit</description>
        <inlineHelpText>Cost per a particular unit</inlineHelpText>
        <label>Pomo Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_Category__c</fullName>
        <description>This is a rollup category for each promotional item. This is used in case we reorder items and the prices change. In this manner we can run a report on the item and roll-up the total cost.</description>
        <inlineHelpText>This is a rollup category for each promotional item. This is used in case we reorder items and the prices change. In this manner we can run a report on the item and roll-up the total cost.</inlineHelpText>
        <label>Promo Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shirts</fullName>
                </value>
                <value>
                    <fullName>Hats</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Yeti</fullName>
                </value>
                <value>
                    <fullName>MISC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <description>Promotional Code</description>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Promo Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Promo_Cost__c</fullName>
        <description>Per unit cost of the promo item</description>
        <label>Promo Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo_Description__c</fullName>
        <description>Description of the promotional item.</description>
        <label>Promo Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Promo_End_Date__c</fullName>
        <defaultValue>Today()+60</defaultValue>
        <label>Promo End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Promo Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promo_URL__c</fullName>
        <description>URL pointing to a picture, description, etc. of the promotional item.</description>
        <label>Promo URL</label>
        <type>Url</type>
    </fields>
    <label>Promo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Promo_Code__c</columns>
        <columns>NAME</columns>
        <columns>Promo_Cost__c</columns>
        <columns>Promo_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Promo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>